@@ -61,7 +61,6 @@ import org.schabi.newpipe.util.ThemeHelper;
 import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 
@@ -594,7 +593,7 @@ public class DownloadDialog extends DialogFragment
     private void showErrorActivity(final Exception e) {
         ErrorActivity.reportError(
                 context,
-                Collections.singletonList(e),
+                List.of(e),
                 null,
                 null,
                 ErrorInfo
