@@ -803,7 +803,7 @@ public class LocalPlaylistFragment extends BaseLocalListFragment<List<PlaylistSt
 
     private PlayQueue getPlayQueue(final int index) {
         if (itemListAdapter == null) {
-            return new SinglePlayQueue(Collections.emptyList(), 0);
+            return new SinglePlayQueue(List.of(), 0);
         }
 
         final List<LocalItem> infoItems = itemListAdapter.getItemsList();
